contact-us, about-us and recipes pages done

--- a/about-us.html
+++ b/about-us.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TasteTreasure</title>
     <link rel="icon" href="asests/TasteTreasure.png">
+    <link rel="stylesheet" href="Style.css">
     <style>
-        *{
+               *{
             margin: 0;
             padding: 0;
             font-family: sans-serif;
@@ -72,14 +73,16 @@
             margin-top: 25%;
         }
         table {
+            margin: 0 auto;
             border-collapse: collapse;
+            width: 80%;
         }
         th, td {
             border: 1px solid rgb(255, 255, 255);
             padding: 8px;
-            text-align: center;
-            height: 300px;
-            width: 300px;
+            text-align:justify;
+            height: 555px;
+            width: 800px;
         }
         img {
             max-width: 100%;
@@ -99,30 +102,19 @@
                 <li><a href="contact-us.html">Contact Us</a></li>
             </ul>
         </div>
-        <div class= "content">
-            <h1>DISCOVER DELICIOUS DELIGHTS</h1>
-            <p>Explore a world of culinary wonders with Discover Delicious Delights,<br> your go-to destination for mouthwatering recipes and gastronomic inspiration.</p>
-        </div>
-    <div class="container">
-        <table>
-            <tr>
-                <td rowspan="2"><a href="/sesame-chicken.html" target="_blank" style="text-decoration: none; color: black;"><img src="asests/Sesame Chicken with Broccoli.jpg" alt=""><br><br><br><h3>Sesame Chicken with Broccoli</h3></a></td></td>
-                <td rowspan="2"><a href="/boston-cream-pie.html" target="_blank" style="text-decoration: none; color: black;"><img src="asests/Boston Cream Pie Cupcakes.jpg" alt=""><br><br><br><h3>Boston Cream Pie Cupcakes</h3></a></td></td>
-                <td rowspan="2"><a href="/chocolate-mouse.html" target="_blank" style="text-decoration: none; color: black;"><img src="asests/Chocolate Mousse for Beginners.jpg" alt=""><br><br><br><h3>Chocolate Mousse for Beginners</h3></a></td></td>
-                <td rowspan="2"><a href="/crispy-caesar-chicken.html" target="_blank" style="text-decoration: none; color: black;"><img src="asests/Crispy Caesar Chicken Cutlets.jpg" alt=""><br><br><br><h3>Crispy Caesar Chicken Cutlets</h3></a></td></td>
-            </tr>
-            <tr>   
-            </tr>
-            <tr>
-                <td rowspan="2"><a href="/simple-broiled-haddock.html" target="_blank" style="text-decoration: none; color: black;"><img src="asests/Simple Broiled Haddock.jpg" alt=""><br><br><br><h3>Simple Broiled Haddock</h3></a></td></td>
-                <td rowspan="2"><a href="/garlic-shrimp.html" target="_blank" style="text-decoration: none; color: black;"><img src="asests/Garlic Shrimp.jpg" alt=""><br><br><br><br><h3>Garlic Shrimp</h3></a></td></td>
-                <td rowspan="2"><a href="/honey-glazed.html" target="_blank" style="text-decoration: none; color: black;"><img src="asests/Honey Glazed Chicken.jpg" alt=""><br><br><br><h3>Honey Glazed Chicken</h3></a></td></td>
-                <td rowspan="2"><a href="/banana-bread.html" target="_blank" style="text-decoration: none; color: black;"><img src="asests/Banana Bread Brownies.jpg" alt=""><br><br><br><h3>Banana Bread Brownies</h3></a></td></td>
-            </tr>
-            <tr>   
-            </tr>
-        </table>
-    </div>
+        <div class="table">
+            <table>
+                <tr>
+                    <td><img src="asests/cheff.png" alt=""></td>
+                    <td style="width: 500px;">
+                        <h1>About Us</h1><br>
+                        <p>Home cooks are our heroes—it's as simple as that. Allrecipes is a community built by and for kitchen experts: The cooks who will dedicate the weekend to a perfect beef bourguignon but love the simplicity of a slow-cooker rendition, too. The bakers who labor over a showstopping 9-layer cake but will just as happily doctor boxed brownies for a decadent weeknight dessert. The entertainers who just want a solid snack spread, without tons of dirty dishes at the end of the night.
+                        </p><br>
+                        <p>Most importantly, Allrecipes connects home cooks with their greatest sources of inspiration — other home cooks. We're the world's leading digital food brand, and that inspires us to do everything possible to keep our community connected. Sixty-million home cooks deserve no less.</p>
+                    </td>
+                </tr>
+            </table>
+        </div><br>
     <footer style="background-color: #AB9746; color: white; text-align: center; padding: 20px;">
         &copy; 2024 TasteTreasure. All rights reserved.
     </footer>
