--- a/contact-us.html
+++ b/contact-us.html
@@ -131,7 +131,7 @@
                         <td colspan="3"><input type="text" style="width: 600px;"></td>
                     </tr>
                     <tr style="height: 40px;">
-                        <td>Age:</td>
+                        <td>E-mail:</td>
                         <td colspan="3"><input type="text" style="width: 600px;"></td>
                     </tr>
                     <tr style="height: 40px;">
